--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.14.4",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
